# TermManager

./: .gitignore  ADMINISTRATOR.md  CHANGELOG.md  README.md  USER.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
data/: app_settings.json  terminology.sqlite3
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  DeveloperGuide.md  IMPORT_EXPORT.md  RELEASE.md  ROADMAP.md  TESTING.md  USER_GUIDE.md  UserGuide.md
old/: terminologie.db  terminologie_manager_V1.1.py
scripts/: seed_demo_data.py
src/terminology_manager/: __init__.py  config.py  main.py
src/terminology_manager/domain/: entities.py
src/terminology_manager/persistence/: database.py  models.py  repositories.py
src/terminology_manager/services/: backup_service.py  duplicates.py  image_editor.py  import_export.py  terminology_service.py  update_service.py
src/terminology_manager/ui/: command_palette.py  image_editor_dialog.py  main_window.py
tests/: test_backup_service.py  test_duplicates.py  test_image_editor.py  test_import_export.py  test_service.py
